--- a/videos/Makefile
+++ b/videos/Makefile
@@ -54,14 +54,34 @@ Foundations.Discuss.3.mp4: zoom/family/zoom_0.mp4
 
 out/Foundations.Discuss.edit.mp4: Foundations.Discuss.0.mp4 Foundations.Discuss.1.mp4 Foundations.Discuss.2.mp4 Foundations.Discuss.3.mp4 Foundations.Discuss.comb.txt
 
+## Heterogeneity DAIDD 2020
+Het.Frame.0.mp4: zoom/het1/zoom_0.mp4
+	ffmpeg -y -i $< -ss 15 -to 154 -acodec copy $@
+Het.Frame.1.mp4: zoom/het1/zoom_0.mp4
+	ffmpeg -y -i $< -ss 204 -to 341 -acodec copy $@
+Het.Frame.2.mp4: zoom/het1/zoom_0.mp4
+	ffmpeg -y -i $< -ss 438 -to 692 -acodec copy $@
+Het.Frame.3.mp4: zoom/het1/zoom_0.mp4
+	ffmpeg -y -i $< -ss 818 -to 1170.5 -acodec copy $@
+Het.Frame.4.mp4: zoom/het1/zoom_0.mp4
+	ffmpeg -y -i $< -ss 1225 -to 1285 -acodec copy $@
+Het.Frame.5.mp4: zoom/het1/zoom_0.mp4
+	ffmpeg -y -i $< -ss 1333 -to 1700 -acodec copy $@
+## DIFFERENT source file
+Het.Frame.6.mp4:  zoom/het2/zoom_2.mp4
+	ffmpeg -y -i $< -ss 15 -to 1577 -acodec copy $@
+
+out/Het.Frame.edit.mp4: Het.Frame.0.mp4 Het.Frame.1.mp4 Het.Frame.2.mp4 Het.Frame.3.mp4 Het.Frame.4.mp4 Het.Frame.5.mp4 Het.Frame.6.mp4 Het.Frame.comb.txt
+
 ######################################################################
 
 ## Rules for making and using concat
 ## Work on comb.txt depedencies combine * and %?
-
-%.comb.txt: 
+.SECONDEXPANSION:
+%.comb.txt: $$(wildcard $$*.?.mp4)
 	ls $*.?.mp4 | perl -npe "s/.*/file '$$&'/" >  $@
 %.edit.mp4:
+	$(MVF) $@ $*.tmp.mp4
 	ffmpeg -f concat -i $(filter %.txt, $^) -codec copy $@
 
 ######################################################################
